feat: settings api
